iptables-export-base
# Generated by iptables-save v1.8.9 (nf_tables) on Sun Jan 28 13:34:56 2024
*filter
:INPUT ACCEPT [23484:10074183]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [24267:20108617]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]

-A INPUT -s 127.0.0.1/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 94.31.176.183/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 188.234.212.90/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 87.249.215.59/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 212.220.231.64/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 94.140.146.159/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 91.229.111.203/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 176.215.13.139/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 85.140.25.3/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 188.226.127.228/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 94.190.18.236/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 178.46.81.150/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 178.46.65.225/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 94.140.135.155/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 185.42.145.247/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 51.158.205.14/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 94.50.112.93/32 -p tcp -m multiport --dports 80,443,993,587,110,143,465,585,995  -j ACCEPT
-A INPUT -s 103.79.255.219/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 188.234.103.23/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 37.113.176.56/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 82.151.211.4/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995  -j ACCEPT
-A INPUT -s 212.49.109.54/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995 -j ACCEPT
-A INPUT -s 212.42.56.147/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995 -j ACCEPT
-A INPUT -s 212.49.120.102/32 -p tcp -m multiport --dports 80,443,993,587,25,110,143,465,585,995 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443,993,110,143,465,585,995 -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8983 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sun Jan 28 13:34:56 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Sun Jan 28 13:34:56 2024
*nat
:PREROUTING ACCEPT [427:23943]
:INPUT ACCEPT [22:1196]
:OUTPUT ACCEPT [574:35960]
:POSTROUTING ACCEPT [574:35960]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 8983 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -d 127.0.0.1/32 ! -i docker0 -p tcp -m tcp --dport 8983 -j DNAT --to-destination 172.17.0.2:8983
COMMIT
# Completed on Sun Jan 28 13:34:56 2024
